@@ -146,6 +146,10 @@ bootRun {
     main = "com.faforever.client.Main"
 }
 
+run {
+  jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
+}
+
 jar {
   manifest {
     attributes "Main-Class": "com.faforever.client.Main",
@@ -324,3 +328,5 @@ dependencies {
 
   codacy("com.github.codacy:codacy-coverage-reporter:-SNAPSHOT")
 }
+
+def void run(groovy.lang.Closure closure) {}
